Clean up new identity code and feature flags
Ref https://jira.greenpeace.org/browse/PLANET-7193

- Remove the old new identity styles
- Clean up partial selectors
- Reduce the complexity of our code
- Make more consistent the use our variables, in some case
- we define heading font family to buttons, or links, among other issues
- Remove missing new_identity_styles variables

--- a/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
+++ b/assets/src/styles/blocks/Accordion/AccordionEditorStyle.scss
@@ -38,17 +38,17 @@
   }
 
   .remove-btn {
-    background-color: $grey-20;
+    background-color: var(--grey-500);
     border-radius: 50%;
     position: absolute;
     top: 10px;
     right: -15px;
-    color: $white;
+    color: var(--white);
 
     &:hover {
-      background-color: $grey-40 !important;
+      background-color: var(--grey-600) !important;
       box-shadow: none !important;
-      color: $white !important;
+      color: var(--white) !important;
     }
   }
 
