--- a/assets/src/styles/blocks/OldENForm/components/_enform-side-style.scss
+++ b/assets/src/styles/blocks/OldENForm/components/_enform-side-style.scss
@@ -151,7 +151,7 @@
   }
 
   .form-container {
-    background: $white;
+    background: var(--white);
     padding: $sp-2;
 
     @include large-and-up {
