--- a/assets/src/styles/blocks/Timeline/TimelineStyle.scss
+++ b/assets/src/styles/blocks/Timeline/TimelineStyle.scss
@@ -93,7 +93,7 @@
   .tl-text h3.tl-headline-date,
   .tl-text .tl-text-date {
     --tl-timeline-- {
-      font-family: var(--headings--font-family);
+      font-family: var(--font-family-tertiary);
     }
   }
 
