--- a/assets/src/styles/blocks/core-overrides/Separator.scss
+++ b/assets/src/styles/blocks/core-overrides/Separator.scss
@@ -1,7 +1,7 @@
 
 .wp-block-separator {
   border: none;
-  border-bottom: 2px solid #8f98a1;
+  border-bottom: 2px solid var(--color-border-separator);
   margin-left: auto;
   margin-right: auto;
   margin-top: $sp-1;
