--- a/assets/src/styles/components/FormSectionTitle.scss
+++ b/assets/src/styles/components/FormSectionTitle.scss
@@ -1,6 +1,6 @@
 .FormSectionTitle {
   font-size: 14pt;
-  border-bottom: 1px solid $grey-20;
+  border-bottom: 1px solid var(--grey-500);
   padding-top: $sp-2;
   padding-bottom: $sp-1;
   margin-bottom: $sp-2;
