--- a/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
+++ b/assets/src/styles/blocks/Covers/layouts/CoversCarouselLayout.scss
@@ -86,7 +86,7 @@
       }
 
       &:not(:disabled):hover {
-        background: $grey-10;
+        background: var(--grey-200);
         padding-inline-start: 0;
       }
     }
