--- a/assets/src/styles/blocks/SocialMediaCards.scss
+++ b/assets/src/styles/blocks/SocialMediaCards.scss
@@ -31,7 +31,7 @@
         bottom: 0;
         left: 0;
         padding: 14px 10px;
-        background: $yellow;
+        background: var(--p4-action-yellow-600);
         opacity: 0;
         transition: all 0.3s ease-in-out;
 
@@ -39,7 +39,7 @@
           height: 100%;
           width: 12%;
           margin: 0 11%;
-          color: $grey-80;
+          color: var(grey-900);
 
           img {
             min-height: 22px;
