--- a/assets/src/styles/components/EmptyMessage.scss
+++ b/assets/src/styles/components/EmptyMessage.scss
@@ -1,5 +1,5 @@
 .EmptyMessage {
-  font-family: var(--headings--font-family);
+  font-family: var(--font-family-primary);
   padding: $sp-4;
-  background: $gp-green-20;
+  background: var(--gp-green-200);
 }
